Changes in @NEW@:
  o Build Changes:
    * Suggested additions to buildRequires lists are now separately
      encoded in the XML build log. (CNY-2621)
    * Loaded recipe modules are no longer tracked in sys.modules
    * The source components needed to build everything in a group can
      now be found when the group uses searchPaths. (CNY-2710)

Changes in 2.0.11:
  o Build Changes:
    * Added 'factory' command to cvc for displaying and changing the factory
      of the currently checked out recipe (CNY-2690)
    * The SubscriptionLogWriter now handles line continuation. (CNY-2693)

  o Bug Fixes:
    * A regression introduced by the build requirements suggestions for
      recipes using r.MakePathsInstall has been fixed. (CNY-2697)
    * A bug that caused a traceback when r.MakeDevices() is called
      with a path that contains 'lib' has been fixed. (CNY-2692)
    * A regression introduced by the multi-URL support for addArchive
      has been fixed. (CNY-2696)

Changes in 2.0.10:
  o Build Changes:
    * An xml formatted log has been added to :debuginfo. This is in
      addition to the human readable log. The xml log contains the same
      information as the human readable log, plus additional contextual
      information useful for formatting the log data. (CNY-2487)
    * AutoResolve defaults to True for image groups. (CNY-2291)
    * Exceptions and inclusions to policies that don't match anything
      will now emit an error. (CNY-2221)
    * A new selective logging facility for policy to use to inspect
      build output has been added. (CNY-2622)
    * It is now possible to pass a list of multiple URLs to addArchive.
      Conary will try to download the source from each URL, in order,
      until it succeeds. (CNY-2505)
    * Recipe actions have now the ability to suggest build requirements.
      (CNY-935)
    * Running "cvc cook" in a directory with a CONARY file now builds the